--- a/lavis/configs/datasets/lvu/defaults_cls.yaml
+++ b/lavis/configs/datasets/lvu/defaults_cls.yaml
@@ -21,4 +21,4 @@ datasets:
           url:  lvu/annotation/test.json
           storage:  lvu/annotation/test.json
       videos:
-        storage: lvu/frames
+        storage: lvu/videos
